# Jeu-du-OctoVerso-

./: CMakeLists.txt  Dictonnaire.c  Dictonnaire.h  README.md  itemVecteur.h  itemvecteur.h  joueur.c  joueur.h  main.c  partie.c  partie.h  pioche.c  pioche.h  rail.c  rail.h  stockage.c  stockage.h  vecteur.c  vecteur.h
